# riftor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MESH.md  Makefile  PICKUP.md  README.md  demo.tape  docker-compose.yml  posthog-setup-report.md  pyproject.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo.yml  release.yml
completions/: _riftor  riftor.bash
dev/: mesh_e2e.py  mesh_live_test.py  mesh_mvp.sh  mesh_mvp_test.py  mesh_p2p_test.py  mesh_xmachine_test.py  smoke.py
docs/: IMPROVEMENT_PLAN.md  RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.5.0.md  RELEASE_NOTES_v3.6.0.md  configuration.md  riftor.1
docs/superpowers/plans/: 2026-06-03-agent-add-scope-tool.md  2026-06-03-config-provider-model-picker.md  2026-06-04-subagents-baaj-chakla.md  2026-06-04-subagents-phase-7b-live-visibility.md  2026-06-05-config-modal-redesign.md  2026-06-05-display-settings-thinking-tool-output.md  2026-06-08-codex-chatgpt-login.md  2026-06-09-playwright-browser.md  2026-06-11-shell-cwd.md  2026-06-16-riftor-mesh-phase2.md  2026-06-17-iroh-docs-gossip-integration.md
docs/superpowers/specs/: 2026-06-03-agent-add-scope-tool-design.md  2026-06-03-config-provider-model-picker-design.md  2026-06-04-subagents-baaj-chakla-design.md  2026-06-04-subagents-phase-7b-live-visibility-design.md  2026-06-04-subagents-phase-7b-live-visibility.md  2026-06-05-config-modal-redesign-design.md  2026-06-05-display-settings-thinking-tool-output-design.md  2026-06-08-codex-chatgpt-login-design.md  2026-06-09-playwright-browser-design.md  2026-06-11-shell-cwd-design.md  2026-06-16-riftor-mesh-phase2-design.md  2026-06-17-iroh-docs-gossip-integration-design.md
meshd/: Cargo.toml
meshd/src/: blobs.rs  docs.rs  engagement.rs  gossip.rs  handler.rs  identity.rs  lib.rs  llm.rs  main.rs  mesh_stack.rs  p2p.rs  processor.rs  prompts.rs  protocol.rs  queue.rs
meshd/tests/: docs_persistence_test.rs  docs_replication_test.rs  integration_test.rs  p2p_test.rs  processor_test.rs
riftor/: __init__.py  __main__.py  _telemetry_keys.py  codex_auth.py  config.py  headless.py  mcp.py  plugins.py  providers.py  telemetry.py  terminology.py
riftor/agent/: __init__.py  antiloop.py  circuit.py  codex_provider.py  context.py  custom_route.py  provider.py  session.py  subagent.py
riftor/agent/prompts/: system.md
riftor/engagement/: __init__.py  bounty_scope.py  cvss.py  doctor.py  graph.py  injection.py  lessons.py  memory.py  merge.py  parsers.py  report.py  scope.py  state.py  templates.py  wordlists.py
riftor/mesh/: __init__.py  client.py  commands.py  daemon.py  events.py  manager.py  models.py  protocol.py  sidebar.py
riftor/safety/: __init__.py  audit.py  permissions.py
riftor/skills/: __init__.py  index.json
riftor/tools/: __init__.py  base.py  browser.py  core.py  engagement.py  subagent.py
riftor/tui/: __init__.py  app.py  config_screen.py  screenshot_gallery.py  theme.py  widgets.py
riftor/tui/themes/: rift.tcss
tests/: conftest.py  test_agent.py  test_antiloop.py  test_bounty_scope.py  test_browser.py  test_circuit.py  test_codex_auth.py  test_codex_provider.py  test_commands_registry.py  test_config.py  test_config_screen.py  test_context.py  test_custom_route.py  test_cvss.py  test_doctor.py  test_engagement.py  test_graph.py  test_headless.py  test_injection.py  test_lessons_hypotheses.py  test_mcp.py  test_memory.py  test_memory_cmd.py  test_merge.py  test_parsers.py  test_permissions.py  test_plugins.py  test_provider.py  test_providers.py  test_report.py  test_resume_retry_hint.py  test_scope.py  test_screenshot_gallery.py  test_session.py  test_subagent.py  test_telemetry.py  test_template_cmd.py  test_templates.py  test_tools.py  test_wordlists.py
tests/fixtures/: login.html
tests/mesh/: conftest.py  test_client.py  test_daemon.py  test_events.py  test_manager.py  test_models.py  test_protocol.py
