[package]
name = "riftor-meshd"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
iroh-docs = { version = "0.101.0", features = ["fs-store"] }
iroh-gossip = "0.101.0"
iroh-blobs = { version = "0.103.0", features = ["fs-store"] }
blake3 = "1"

[lib]
name = "meshd"
path = "src/lib.rs"
